# rmdadm

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  rmdadm-0.1.0-1.el10.src.rpm  rmdadm-0.1.0-2.el10.src.rpm  rmdadm-0.1.0-3.el10.src.rpm  rmdadm-0.1.0-4.el10.src.rpm  rmdadm.conf.example  rmdadm.spec
benches/: array_benches.rs
k8s/: daemonset.yaml  raidarray-crd.yaml  rbac.yaml
src/: btrfs.rs  cli.rs  cluster.rs  config.rs  daemon.rs  error.rs  ioctl.rs  lib.rs  logging.rs  main.rs  migration.rs  monitoring.rs  sysfs.rs  validation.rs
src/api/: auth.rs  handlers.rs  mod.rs  models.rs  openapi.rs  rate_limit.rs  routes.rs
src/metadata/: mod.rs  v0.rs  v1.rs
src/ops/: apply.rs  assemble.rs  bitmap.rs  create.rs  detail.rs  exporter.rs  manage.rs  mod.rs  monitor.rs  reshape.rs  spare.rs
systemd/: rmdadm-scrub.service  rmdadm-scrub.timer  rmdadm.service
tests/: api_tests.rs  integration_tests.rs
tests/common/: mod.rs
udev/: 64-rmdadm.rules
