[package]
name = "rmdadm"
version = "0.1.0"
edition = "2021"
authors = ["Sisyphus"]
description = "A modern Rust rewrite of mdadm"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
libc = "0.2"
nix = { version = "0.27", features = ["ioctl", "fs"] }
thiserror = "1.0"
byteorder = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rayon = "1.8"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
utoipa = { version = "4.2", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
ratatui = "0.26"
crossterm = "0.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
lettre = "0.11"
reqwest = { version = "0.11", features = ["json"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "limit"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
jsonwebtoken = "9.2"
bcrypt = "0.15"

[dev-dependencies]
mockall = "0.12"
tempfile = "3.0"
proptest = "1.0"
criterion = "0.5"
tower = { version = "0.4", features = ["util"] }
hyper = { version = "1.0", features = ["full"] }
http-body-util = "0.1"
